<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.lostFoundObject.PersonFragment"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/AddItemDetails" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/_248sdp"
        android:layout_height="@dimen/_50sdp"
        android:id="@+id/other"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_17sdp"
        android:textSize="@dimen/_15ssp"
        app:boxCornerRadiusBottomStart="5dp"
        android:visibility="gone"
        >
        <EditText
            android:id="@+id/Other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/_15ssp"
            android:hint="@string/type"
            android:autofillHints="@string/City"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/_248sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_17sdp"
        android:textSize="@dimen/_15ssp"
        app:boxCornerRadiusBottomStart="5dp"
        >
        <EditText
            android:id="@+id/Serial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/_15ssp"
            android:hint="@string/SerialID"
            android:autofillHints="@string/City"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/_248sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_17sdp"
        android:textSize="@dimen/_15ssp"
        app:boxCornerRadiusBottomStart="5dp"
        >
        <EditText
            android:id="@+id/brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/_15ssp"
            android:hint="@string/TheBrand"
            android:autofillHints="@string/TheBrand"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/_248sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_17sdp"
        android:textSize="@dimen/_15ssp"
        app:boxCornerRadiusBottomStart="5dp"
        >
        <AutoCompleteTextView
            android:id="@+id/ColorOfObject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/_15ssp"
            android:hint="@string/ColorOfObject"
            android:autofillHints="@string/ColorOfObject"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <CheckBox
        android:id="@+id/checkIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ImageItem"
        android:layout_margin="@dimen/_10sdp"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/objectImageView"
        style="@android:style/Widget.ImageButton"
        android:layout_width="@dimen/_130sdp"
        android:background="#FFFFFF"
        android:layout_height="@dimen/_130sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_gallery_24"
        android:visibility="gone"
        />
        <EditText
            android:id="@+id/textArea_information"
            android:layout_width="@dimen/_248sdp"
            android:layout_height="@dimen/_130sdp"
            android:hint="@string/Description"
            android:textColorHighlight="#CC888585"
            android:background="#80FDEF96"
            android:gravity="top|left"
            android:layout_gravity="center"
            android:textColorHint="@color/cardview_dark_background"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:scrollbarSize="@dimen/_5sdp"
            android:scrollbars="vertical"
            android:lines="6"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_15ssp"
            android:scrollHorizontally="false"
            style="@style/Widget.AppCompat.EditText"/>
</LinearLayout>