<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_20sdp"
    tools:context=".ui.forgetPasswordScreens.MakeSelection">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/general_back_icon"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="@string/make_selection"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_25ssp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_extralight"
            android:text="@string/forget_pass_details"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/light_white"
            android:padding="@dimen/_10sdp">
            <ImageView
                android:id="@+id/mobile_icon"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_baseline_phone_android_24"
                android:layout_marginRight="@dimen/_40sdp"
                />
            <TextView
                android:id="@+id/mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_extralight"
                android:text="@string/via_sms"
                android:layout_marginLeft="@dimen/_70sdp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                />
            <TextView
            android:id="@+id/mobile_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_extralight"
            android:text="@string/make_selection_detail1"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
               android:layout_marginLeft="@dimen/_70sdp"
                android:layout_below="@+id/mobile_title"
            />
            <Button
                android:id="@+id/sms_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/light_white"
           >
            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_baseline_email_24"
                android:layout_marginRight="@dimen/_40sdp"
                />
            <TextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_extralight"
                android:text="@string/via_mail"
                android:layout_marginLeft="@dimen/_70sdp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                />
            <TextView
                android:id="@+id/email_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_extralight"
                android:text="@string/mak_selection_details2"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:layout_marginLeft="@dimen/_70sdp"
                android:layout_below="@+id/email_title"
                />
            <Button
                android:id="@+id/email_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>
