<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_20sdp"
    tools:context=".ui.forgetPasswordScreens.VerifiyCode">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/general_back_icon"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="@string/code"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_70ssp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/muli_black"
            android:gravity="center"
            android:text="@string/code_verification"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/muli_extralight"
            android:gravity="center"
            android:text="Enter one time password send on +20116526688"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            />

        <com.chaos.view.PinView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:inputType="number"
            android:layout_gravity="center"
            app:itemCount="6"
            android:itemBackground="@color/light_white"
            app:lineColor="@color/black"
            android:textColor="@color/black"
            app:viewType="none"
            style="@style/PinWidget.PinView"
            android:cursorVisible="true"
            app:cursorColor="@color/black"
           app:hideLineWhenFilled="true"
            app:itemRadius="@dimen/_3sdp"/>
        <Button
            android:id="@+id/verify_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_code"
            android:background="@color/orange"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_20sdp"
            />

    </LinearLayout>
</ScrollView>
